--- a/index.html
+++ b/index.html
@@ -24,8 +24,38 @@
                         <a href="">Contate-nos</a>
                     </nav>
                 </div>
-
             </header>
+            <div class="conteudo-banner">
+                <div class="texto-banner">
+                    <p>"Design que transforma, marcas que inspiram"</p>
+                    <ul>
+                        <li>Vídeo</li>
+                        <li>Fotografia</li>
+                        <li>Aplicativos</li>
+                        <li>Redes Sociais</li>
+                    </ul>
+                </div>
+                <img src="./IMG/Modelo.png" alt="Modelo da Pixel V">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+
+
+
+
+
 
 
 
