Finalizado sessão sobre

--- a/index.html
+++ b/index.html
@@ -37,29 +37,28 @@
                 </div>
                 <img src="./IMG/Modelo.png" alt="Modelo da Pixel V">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
 
-
-
-
-
-
-
-
         </div>
+
+        <section id="sobre" class="container-grid">
+            <img src="./img/sobre.png" alt="Foto de uma pessoa trabalhando no escritório da PIXEL V">
+
+            <div class="conteudo-sobre">
+                <div class="titulo">
+                    <h2>Sobre</h2><span>a nossa agência</span>
+                </div>
+
+                <p>Somos uma agência de design sustentável que une
+                    inovação, criatividade e responsabilidade
+                    ambiental para criar marcas autênticas e
+                    impactantes. Nosso diferencial é transformar
+                    propósito em identidade visual, ajudando
+                    empresas a comunicar sua visão sustentável de
+                    forma clara e envolvente.
+                </p>
+            </div>
+        </section>
 
 
     </main>
