--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="./IMG/favicon.svg" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -138,14 +142,54 @@
                 <div>
 
                 </div>
-                  <div class="linharoxa"> </div>
+                <div class="linharoxa"> </div>
 
             </div>
 
         </section>
+        <sections id="cases">
+            <div class="titulo">
+                <h2>Cases</h2><span>de Sucesso</span>
 
+            </div>
+
+            <div id="meuCarrossel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/Banner04 (1).png" class="d-block w-100" alt="Imagem 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/Banner05.png" class="d-block w-100" alt="Imagem 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/Banner06.png" class="d-block w-100" alt="Imagem 3">
+                    </div>
+                </div>
+
+                <!-- Botões de navegação -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#meuCarrossel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#meuCarrossel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Próximo</span>
+                </button>
+
+                <!-- Indicadores (bolinhas) -->
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#meuCarrossel" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#meuCarrossel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#meuCarrossel" data-bs-slide-to="2"></button>
+                </div>
+            </div>
+        </sections>
 
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
