--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PIXEL V</title>
-    <link rel="shortcut icon" href="./IMG/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- Importa o arquivo javascript para a página -->
+    <script src="./script.js" defer></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -19,19 +22,41 @@
         <div class="banner">
             <header>
                 <div class="container-grid">
-                    <img src="./IMG/VersãoPositiva.svg" alt="Logo da empresa Pixel V">
+                    <img src="./img/VersãoPositiva.svg" alt="Logo da empresa Pixel V">
 
-                    <nav class="menu">
-                        <a href="">Sobre</a>
-                        <a href="">Serviços</a>
-                        <a href="">Portifólio</a>
-                        <a href="">Contate-nos</a>
+                    <nav id="menu" class="menu">
+                        <a href="#sobre">Sobre</a>
+                        <a href="#servicos">Serviços</a>
+                        <a href="#cases">Portfólio</a>
+                        <a href="#contato">Contate-nos</a>
                     </nav>
+
+                    <button onclick="abreFechaMenu()">
+                        <!-- Menu de hamburguer -->
+                        <!-- Icone de barras -->
+                        <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path
+                                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                        </svg>
+
+                        <!-- Icone de X -->
+                        <svg id="icone-x" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path
+                                d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+                        </svg>
+                        <!-- ------------------------------------------ -->
+                    </button>
+
+
                 </div>
+
             </header>
+
             <div class="conteudo-banner">
                 <div class="texto-banner">
-                    <p>"Design que transforma, marcas que inspiram"</p>
+                    <p>"Design que transforma, Marcas que inspiram"</p>
                     <ul>
                         <li>Vídeo</li>
                         <li>Fotografia</li>
@@ -39,29 +64,29 @@
                         <li>Redes Sociais</li>
                     </ul>
                 </div>
-                <img src="./IMG/Modelo.png" alt="Modelo da Pixel V">
+                <img src="./img/Modelo.png" alt="Modelo da pixel V">
 
             </div>
-
         </div>
 
         <section id="sobre" class="container-grid">
-            <img src="./img/sobre.png" alt="Foto de uma pessoa trabalhando no escritório da PIXEL V">
+            <img src="./img/sobre.png" alt="Foto de uma pessoa 
+            trabalhando no escritorio da PIXEL V">
 
             <div class="conteudo-sobre">
                 <div class="titulo">
                     <h2>Sobre</h2><span>a nossa agência</span>
                 </div>
-
                 <p>Somos uma agência de design sustentável que une
                     inovação, criatividade e responsabilidade
                     ambiental para criar marcas autênticas e
-                    impactantes. Nosso diferencial é transformar
-                    propósito em identidade visual, ajudando
+                    impactantes. Nosso diferencial é transfomar
+                    propósito em identidade visual, ajundando
                     empresas a comunicar sua visão sustentável de
                     forma clara e envolvente.
                 </p>
             </div>
+
         </section>
 
         <section id="parallax"></section>
@@ -74,15 +99,15 @@
             </div>
 
             <div class="container-cards">
+
                 <div class="card">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 256 256">
                         <path
                             d="M223.45,40.07a8,8,0,0,0-7.52-7.52C139.8,28.08,78.82,51,52.82,94a87.09,87.09,0,0,0-12.76,49c.57,15.92,5.21,32,13.79,47.85l-19.51,19.5a8,8,0,0,0,11.32,11.32l19.5-19.51C81,210.73,97.09,215.37,113,215.94q1.67.06,3.33.06A86.93,86.93,0,0,0,162,203.18C205,177.18,227.93,116.21,223.45,40.07ZM153.75,189.5c-22.75,13.78-49.68,14-76.71.77l88.63-88.62a8,8,0,0,0-11.32-11.32L65.73,179c-13.19-27-13-54,.77-76.71,22.09-36.47,74.6-56.44,141.31-54.06C210.2,114.89,190.22,167.41,153.75,189.5Z">
                         </path>
                     </svg>
-
                     <h3>Branding</h3>
-                    <p>Identidade Visual, Logotipo, Manual da marca</p>
+                    <p>Identidade Visual, Logotipo, Manual da marca.</p>
                 </div>
 
                 <div class="card">
@@ -92,7 +117,7 @@
                             d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4q0 1 .25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75Q6 13 6 12H2s-2 0-2-2zm1.398-.855a.76.76 0 0 0-.254.302A1.5 1.5 0 0 0 1 4.01V10c0 .325.078.502.145.602q.105.156.302.254a1.5 1.5 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.76.76 0 0 0 .254-.302 1.5 1.5 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.76.76 0 0 0-.302-.254A1.5 1.5 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145" />
                     </svg>
                     <h3>UI & UX</h3>
-                    <p>Design e desenvolvimento de landing pages. </p>
+                    <p>Design e desenvolvimento de landing pages.</p>
                 </div>
 
                 <div class="card">
@@ -101,9 +126,8 @@
                         <path
                             d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 75 75 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0m-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233q.27.015.537.036c2.568.189 5.093.744 7.463 1.993zm-9 6.215v-4.13a95 95 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A61 61 0 0 1 4 10.065m-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68 68 0 0 0-1.722-.082z" />
                     </svg>
-
                     <h3>Marketing</h3>
-                    <p>Redes Sociais, Campanha, E-mail Marketing</p>
+                    <p>Redes Sociais, Campanhas, E-mail marketing.</p>
                 </div>
 
                 <div class="card">
@@ -114,7 +138,6 @@
                         <path
                             d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5m0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0" />
                     </svg>
-
                     <h3>Audiovisual</h3>
                     <p>Produções Audiovisuais, ensaio fotográfico</p>
                 </div>
@@ -135,28 +158,24 @@
                             d="M245.11,60.68c-7.65-13.19-27.84-16.16-58.5-8.66A95.93,95.93,0,0,0,32,128a98,98,0,0,0,.78,12.31C5.09,169,5.49,186,10.9,195.32,16,204.16,26.64,208,40.64,208a124.11,124.11,0,0,0,28.79-4A95.93,95.93,0,0,0,224,128a97.08,97.08,0,0,0-.77-12.25c12.5-13,20.82-25.35,23.65-35.92C248.83,72.51,248.24,66.07,245.11,60.68ZM128,48a80.11,80.11,0,0,1,78,62.2c-17.06,16.06-40.15,32.53-62.07,45.13C116.38,171.14,92.48,181,73.42,186.4A79.94,79.94,0,0,1,128,48ZM24.74,187.29c-1.46-2.51-.65-7.24,2.22-13a79.05,79.05,0,0,1,10.29-15.05,96,96,0,0,0,18,31.32C38,193.46,27.24,191.61,24.74,187.29ZM128,208a79.45,79.45,0,0,1-38.56-9.94,370,370,0,0,0,62.43-28.86c21.58-12.39,40.68-25.82,56.07-39.08A80.07,80.07,0,0,1,128,208ZM231.42,75.69c-1.7,6.31-6.19,13.53-12.63,21.13a95.69,95.69,0,0,0-18-31.35c14.21-2.35,27.37-2.17,30.5,3.24C232.19,70.28,232.24,72.63,231.42,75.69Z">
                         </path>
                     </svg>
-                    <h3>Animação</h3>
-                    <p>Damos a vida à sua marca com animações envolventes</p>
+                    <h3>Animações</h3>
+                    <p>Damos vida à sua marca com animações envolventes</p>
                 </div>
 
-                <div>
-
-                </div>
-                <div class="linharoxa"> </div>
+                <div class="linha-roxa"></div>
 
             </div>
-
         </section>
-        <sections id="cases">
+
+        <section id="cases">
             <div class="titulo">
                 <h2>Cases</h2><span>de Sucesso</span>
-
             </div>
 
             <div id="meuCarrossel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/Banner04 (1).png" class="d-block w-100" alt="Imagem 1">
+                        <img src="./img/Banner04.png" class="d-block w-100" alt="Imagem 1">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/Banner05.png" class="d-block w-100" alt="Imagem 2">
@@ -183,23 +202,27 @@
                     <button type="button" data-bs-target="#meuCarrossel" data-bs-slide-to="2"></button>
                 </div>
             </div>
-        </sections>
-        <form action="">
 
-            <section class="contato">
-                <div class="titulo">
-                    <span>Entre em</span>
-                    <h2>Contato</h2>
-                </div>
+        </section>
+
+        <section id="contato">
+            <div class="titulo">
+                <span>Entre em</span>
+                <h2>Contato</h2>
+            </div>
+
+            <form action="">
                 <div class="campo">
-                    <label for="campo-nome">Qual é o seu nome? </label>
-                    <input type="texto" id="campo-nome" placeholder="Digite o seu nome...">
+                    <label for="campo-nome">Qual é o seu nome?</label>
+                    <input type="text" id="campo-nome" placeholder="Digite o seu nome...">
                 </div>
 
                 <div class="campo">
-                    <label for="campo-email">Em qual e-mail podemos te responder?</label>
-                    <input type="email" id="campo-email" placeholder="Digite seu e-mail">
+                    <label for="campo-email">Em qual e-mail podemos
+                        te responder?</label>
+                    <input type="email" id="campo-email" placeholder="Digite seu e-mail..">
                 </div>
+
                 <div class="campo-descricao">
                     <label for="campo-texto">Descreva um pouco da sua
                         empresa, e também o problema que está procurando
@@ -209,11 +232,11 @@
                         rows="10"></textarea>
                 </div>
                 <button type="submit">Enviar</button>
-        </form>
+            </form>
         </section>
     </main>
 
-     <footer>
+    <footer>
         <div class="container-grid roda-pe">
             <img src="./img/VersãoPositiva.svg" alt="Logo da Pixel V">
 
@@ -257,11 +280,13 @@
 
 
 
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
