Links feitos/correção

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <li>Redes Sociais</li>
                     </ul>
                 </div>
-                <img src="./img/Modelo.png" alt="Modelo da pixel V">
+                <img src="./img/Modelo.png"alt="Modelo da pixel V">
 
             </div>
         </div>
@@ -175,7 +175,7 @@
             <div id="meuCarrossel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/Banner04.png" class="d-block w-100" alt="Imagem 1">
+                        <img src="./img/Banner04 (1).png" class="d-block w-100" alt="Imagem 1">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/Banner05.png" class="d-block w-100" alt="Imagem 2">
